# GPUConnect

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASES.md  SECURITY.md  make.bat  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  security-scan.yml  test-and-quality.yml
agent/: agent_ollama.py
agent/linux/: README.md  build_linux.bat  build_linux.sh  install.sh  uninstall.sh
agent/macos/: README.md  build_macos.bat  build_macos.sh  install.sh  requirements.txt  (+1 more)
backend/: build.sh  pyproject.toml  requirements.txt
backend/computing/: consumers.py  models.py  routing.py  urls.py  utils.py  views.py
backend/computing/migrations/: 0002_chatsession_job_session.py
backend/computing/tests/: test_computing.py  test_consumers.py  test_flow.py  test_serializers.py  test_utils.py  test_views.py
backend/config/: settings.py  urls.py
backend/core/: adapters.py  apps.py  models.py  oauth_urls.py  oauth_views.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_wallet_balance.py  0003_agenttoken.py
backend/core/tests/: test_adapters.py  test_auth.py  test_models.py  test_oauth_views.py  test_views.py
backend/custom_migrations/sites/: 0001_initial.py  0002_alter_site_id.py
backend/payments/: models.py  serializers.py  services.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/payments/tests/: test_payments.py
frontend/: package-lock.json  package.json  vercel.json
(+22 files in other folders)
